finished the html file

--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
        </ol>
       </p>
     </aside>
+    <section id="media">
+      <article>
+        <h2>The Scenery in NYC</h2>
+        <p>
+          While the view in the city is beautiful, the sounds are not as lovely. Below you'll see an example of the view and the sounds you'll deal with in NYC on a daily basis.
+        </p>
+      </article>
+      <video controls src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4"></video>
+      <embed src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline.jpeg"></embed>
+      <audio controls src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-sounds.mov"></audio>
+    </section>
     </main> 
-     
+     <footer id="about">
+      <p>Posted by: J Palacio</p>
+      <p>Contact information: jaypalacio95@gmail.com</p>
+     </footer>
   </body>
 </html>
